--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 								</span>
 								<div class="desc">
 									<h3>Langage C</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Algorithmie, programmation système, accès bas niveau aux fichiers, répertoire, processus, . . .</p>
 								</div>
 							</div>
 						</div>
