--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 								</span>
 								<div class="desc">
 									<h3>HTML</h3>
-									<p>Création et mise en forme de page web </p>
+									<p>Création et mise en forme de page web <br> Formulaire, tableaux, . . . </p>
 								</div>
 							</div>
 						</div>
@@ -201,7 +201,8 @@
 								</span>
 								<div class="desc">
 									<h3>CSS</h3>
-									<p>Définition du style graphique d'une page web </p>
+									<p>Définition du style graphique d'une page web <br>
+									Organisation des éléments, page responsive, etc . . . </p>
 								</div>
 							</div>
 						</div>
