--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 								<div class="desc">
 									<h3>CSS</h3>
 									<p>Définition du style graphique d'une page web <br>
-									Organisation des éléments, page responsive, etc . . . </p>
+									Organisation des éléments, site responsive, etc . . . </p>
 								</div>
 							</div>
 						</div>
