Ajout télechargement CV

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Bonjour ! <br> Je suis Pierre Foulon, actuellement à la recherche d'un stage dans le cadre de ma formation</h1>
-												<p><a class="btn btn-primary btn-learn">Télécharger mon CV <i class="icon-download4"></i></a></p>
+												<p><a class="btn btn-primary btn-learn" href="CV - Recherche stage.pdf" download="CV Pierre FOULON">Télécharger mon CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
