--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="images/icone.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -341,7 +341,7 @@
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-1">
-					                  <i class="icon-pen2"></i>
+					                  <i class="icon-display2"></i>
 					               </div>
 					               <div class="timeline-label">
 					                  <h2><a href="#">Bachelor Universitaire Technologique Informatique</a> <span>2021 - AUJOURD'HUI</span> <br> <span>IUT A de Lille, 59653 Villeneuve-d'Ascq</span></h2>
@@ -352,7 +352,7 @@
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-2">
-					                  <i class="icon-pen2"></i>
+					                  <i class="icon-book2"></i>
 					               </div>
 									<div class="timeline-label">
 										<h2><a href="#">Baccalauréat Général spécialités Mathématiques & NSI</a> <span>2018- 2021</span> 
@@ -383,7 +383,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/projetEscapeGame.jpg);">
+							<div class="project" style="background-image: url(images/projetDeplServer.jpg);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Déploiement d'une application web</a></h3>
