--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Pierre Foulon</a></h1>
-				<span class="position"><a href="#">Administrateur systèmes<br> et réseaux / DevOps</a></span>
+				<span class="position"><a href="#">Administrateur systèmes<br> et réseaux</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -378,10 +378,22 @@
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
-							<!--<p class="work-menu"><span><a href="#" class="active">Graphic Design</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span></p>
-						-->	
+							<!-- <p class="work-menu"><span><a href="#" class="active">Graphic Design</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span></p> -->
+						</div>
 					</div>
-					</div>
+					<div class="row">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="project" style="background-image: url(images/blog-2.jpg);">
+								<div class="desc">
+									<div class="con">
+										<h3>Déployer et sécuriser des services dans un réseau</h3>
+										<span>
+											Dans le cadre de cette SAÉ, on nous a proposé de nous mettre du coté de l'hébergeur. On a donc mis en place une infrastructure permettant de réaliser l’hébergement de différents serveurs Odoo pour des clients. Nous avons été ammenés à réaliser plusieurs installations d’Odoo en fonction des besoins des clients, il était donc primordial d’automatiser le processus de déploiment. L’élément central de cette SAÉ était donc la production de scripts shell permettant ce déploiment automatique.
+										</span>
+									</div>
+								</div>
+							</div>
+						</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/projetDeplServer.jpg);">
