Update pour rendu S4

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
-						   					<h1>Bonjour ! <br> Je suis Pierre Foulon, actuellement à la recherche d'un stage dans le cadre de ma formation</h1>
+						   					<h1>Bonjour ! <br> Je suis Pierre Foulon, actuellement en 2ème année de BUT Informatique à l'IUT A de Lille</h1>
 												<p><a class="btn btn-primary btn-learn" href="CV - Recherche stage - Flouté.pdf" download="CV Pierre FOULON">Télécharger mon CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
@@ -126,10 +126,7 @@
 											<p>Passionné d’informatique, cette formation paraissait évidente pour moi. J’ai pu étendre, au cours de ma formation, des compétences dans la gestion de systèmes et l’administration de réseau. Je suis capable de déployer des postes de travail, mettre en place des serveurs ainsi que les disposer sur un réseau, j’ai une certaine appétence dans la gestion de projet, j’apprécie organiser des projets et travailler en équipe.											
 											</p>
 											<p>En parallèle j’ai pu améliorer mes capacités à l’oral ainsi qu’en gestion de projet suite aux différentes SAé proposées. Nous avons pu réaliser au cours de la formation BUT, plusieurs déploiement de postes de travail avec la configuration du réseau, de la gestion de base de données, le déploiement d’un serveur web ainsi que la création complète d’un Escape Game.												
-											</p>
-											<p>Un stage en entreprise me permettrait d’en apprendre plus sur l’organisation d’une équipe lors d’un projet informatique, enrichir mes compétences dans le l’administration et la gestion de parcs informatiques ou dans le métier de DevOps et ainsi me fixer sur la branche qui m'intéresse le plus.
-											</p>
-																		
+											</p>																		
 									</div>
 								</div>
 							</div>
@@ -214,6 +211,17 @@
 								<div class="desc">
 									<h3>Python</h3>
 									<p>Faible base en scripting. <br>Utilisation algorithmique, connaissance de la syntaxe</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 text-center animate-box">
+							<div class="services color-4">
+								<span class="icon">
+									<img src="images/logoDocker.png">
+								</span>
+								<div class="desc">
+									<h3>Docker</h3>
+									<p>Création, gestion et configuration de conteneurs et images Docker </p>
 								</div>
 							</div>
 						</div>
@@ -383,17 +391,30 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/blog-2.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3>Déployer et sécuriser des services dans un réseau</h3>
-										<span>
-											Dans le cadre de cette SAÉ, on nous a proposé de nous mettre du coté de l'hébergeur. On a donc mis en place une infrastructure permettant de réaliser l’hébergement de différents serveurs Odoo pour des clients. Nous avons été ammenés à réaliser plusieurs installations d’Odoo en fonction des besoins des clients, il était donc primordial d’automatiser le processus de déploiment. L’élément central de cette SAÉ était donc la production de scripts shell permettant ce déploiment automatique.
-										</span>
-									</div>
+						<div class="project" style="background-image: url(images/projetDeplOdoo.jpg);">
+							<div class="desc">
+								<div class="con">
+									<h3>Déployer et sécuriser des services dans un réseau</h3>
+									<span>
+										Dans le cadre de cette SAÉ, nous nous sommes mis du coté de l'hébergeur. On a donc mis en place une infrastructure permettant de réaliser l’hébergement de différents serveurs Odoo pour des clients. Nous avons été ammenés à réaliser plusieurs installations d’Odoo en fonction des besoins des clients, il était donc primordial d’automatiser le processus de déploiment. L’élément central de cette SAÉ était donc la production de scripts shell permettant ce déploiment automatique. Nous avons du accompagner ce déploiement avec de la documentation afin d'aider au mieux les potentiels utilisateurs.
+									</span>
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+						<div class="project" style="background-image: url(images/raspberrypi_logo.png);">
+							<div class="desc">
+								<div class="con"> 
+									<h3>Raspberry Pi</h3>
+									<span>
+										Suite à la récupération d'un Raspberry Pi, j'ai décidé de m'en servir afin d'y ajouter Home-Assistant, qui me permet de controler la domotique de mon appartement. J'ai également déployé AdGuardHome pour de bloquer les publicités sur mon réseau personnel. Je suis entrain de mettre en place un VPN afin d'accéder au réseau de mon domicile à distance. J'ai donc étudié la documentation de Raspbian et de tous les outils mis en place afin d'obtenir le système le plus sécurisé. 
+									</span>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/projetDeplServer.jpg);">
