--- a/index.html
+++ b/index.html
@@ -391,134 +391,131 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-						<div class="project" style="background-image: url(images/projetDeplOdoo.jpg);">
-							<div class="desc">
-								<div class="con">
-									<h3>Déployer et sécuriser des services dans un réseau</h3>
-									<span>
-										Dans le cadre de cette SAÉ, nous nous sommes mis du coté de l'hébergeur. On a donc mis en place une infrastructure permettant de réaliser l’hébergement de différents serveurs Odoo pour des clients. Nous avons été ammenés à réaliser plusieurs installations d’Odoo en fonction des besoins des clients, il était donc primordial d’automatiser le processus de déploiment. L’élément central de cette SAÉ était donc la production de scripts shell permettant ce déploiment automatique. Nous avons du accompagner ce déploiement avec de la documentation afin d'aider au mieux les potentiels utilisateurs.
-									</span>
+							<div class="project" style="background-image: url(images/projetDeplOdoo.jpg);">
+								<div class="desc">
+									<div class="con">
+										<h3>Déployer et sécuriser des services dans un réseau</h3>
+										<span>
+											Dans le cadre de cette SAÉ, nous nous sommes mis du coté de l'hébergeur. On a donc mis en place une infrastructure permettant de réaliser l’hébergement de différents serveurs Odoo pour des clients. Nous avons été ammenés à réaliser plusieurs installations d’Odoo en fonction des besoins des clients, il était donc primordial d’automatiser le processus de déploiment. L’élément central de cette SAÉ était donc la production de scripts shell permettant ce déploiment automatique. Nous avons du accompagner ce déploiement avec de la documentation afin d'aider au mieux les potentiels utilisateurs.
+										</span>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 						<div class="project" style="background-image: url(images/raspberrypi_logo.png);">
 							<div class="desc">
 								<div class="con"> 
 									<h3>Raspberry Pi</h3>
 									<span>
-										Suite à la récupération d'un Raspberry Pi, j'ai décidé de m'en servir afin d'y ajouter Home-Assistant, qui me permet de controler la domotique de mon appartement. J'ai également déployé AdGuardHome pour de bloquer les publicités sur mon réseau personnel. Je suis entrain de mettre en place un VPN afin d'accéder au réseau de mon domicile à distance. J'ai donc étudié la documentation de Raspbian et de tous les outils mis en place afin d'obtenir le système le plus sécurisé. 
+										Suite à la récupération d'un Raspberry Pi, j'ai décidé de m'en servir afin d'y ajouter Home-Assistant, qui me permet de controler la domotique de mon appartement. J'ai également déployé AdGuardHome pour de bloquer les publicités sur mon réseau personnel. Je suis entrain de mettre en place un VPN afin d'accéder au réseau de mon domicile à distance. J'ai donc étudié la documentation de Raspbian et de tous les outils mis en place afin d'obtenir le système le plus sécurisé avec la virtualisation des services.
 									</span>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/projetDeplServer.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3>Déploiement d'une application web</h3>
-										<span>
-											Ce projet consiste à créer un service pouvant fonctionner sur plusieurs machines différentes et avec la possibilité de communiquer entre-elles. Pour cela nous avions dû configurer un reverse proxy (Pour nous avec NGINX), tout en déployant un service web utilisant une base de donnée PostGreSQL.
-										</span>
-									</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+						<div class="project" style="background-image: url(images/projetDeplServer.jpg);">
+							<div class="desc">
+								<div class="con">
+									<h3>Déploiement d'une application web</h3>
+									<span>
+										Ce projet consiste à créer un service pouvant fonctionner sur plusieurs machines différentes et avec la possibilité de communiquer entre-elles. Pour cela nous avions dû configurer un reverse proxy (Pour nous avec NGINX), tout en déployant un service web utilisant une base de donnée PostGreSQL.
+									</span>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/projetAgile.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3>Projet Agile</h3>
-										<span>Le but de cette SAé était de réaliser un projet suivant la méthode agile. Nous avons choisis de partir sur le jeu du UNO avec une interface dans un terminal de commande. <br>
-										Nous avons donc établi des tâches pour chaque sprints en répartissant le travail entre-nous afin d'optimiser et rendre un travail de qualité. A la fin de chaque sprint une démonstration fonctionnelle était requise.</span>
-										<p class="icon">
-											<span><a href="https://github.com/PierreChtimipi/ProjetAgile2022" target="_blank"><i class="icon-github"></i></a></span>
-										</p>
-									</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="project" style="background-image: url(images/projetAgile.jpg);">
+							<div class="desc">
+								<div class="con">
+									<h3>Projet Agile</h3>
+									<span>Le but de cette SAé était de réaliser un projet suivant la méthode agile. Nous avons choisis de partir sur le jeu du UNO avec une interface dans un terminal de commande. <br>
+									Nous avons donc établi des tâches pour chaque sprints en répartissant le travail entre-nous afin d'optimiser et rendre un travail de qualité. A la fin de chaque sprint une démonstration fonctionnelle était requise.</span>
+									<p class="icon">
+										<span><a href="https://github.com/PierreChtimipi/ProjetAgile2022" target="_blank"><i class="icon-github"></i></a></span>
+									</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/projetEscapeGame.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3>Escape Game</h3>
-										<span>Conception et réalisation complète d'un Escape Game dans l'univers des jeux-vidéos, plus précisement celui de The Legend of Zelda. <br>
-										Jeu réalisé en java avec une interface via un terminal de commande. Le but réparer le jeu au travers de différentes énigmes permettant de réviser nos cours de système, développement java, convertion binaire, etc. . .</span>
-										<p class="icon">
-											<span><a href="https://github.com/PierreChtimipi/EscapePlayerOne"><i class="icon-github"></i></a></span>
-										</p>
-									</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
+						<div class="project" style="background-image: url(images/projetEscapeGame.jpg);">
+							<div class="desc">
+								<div class="con">
+									<h3>Escape Game</h3>
+									<span>Conception et réalisation complète d'un Escape Game dans l'univers des jeux-vidéos, plus précisement celui de The Legend of Zelda. <br>
+									Jeu réalisé en java avec une interface via un terminal de commande. Le but réparer le jeu au travers de différentes énigmes permettant de réviser nos cours de système, développement java, convertion binaire, etc. . .</span>
+									<p class="icon">
+										<span><a href="https://github.com/PierreChtimipi/EscapePlayerOne"><i class="icon-github"></i></a></span>
+									</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-							<div class="project" style="background-image: url(images/instalPostes.jfif);">
-								<div class="desc">
-									<div class="con">
-										<h3>Installations de postes</h3>
-										<span>Cette SAé nous à demandé le déploiement et la configuration de postes de travail prêt à l'emploi pour un développeur. Nous avons donc dû installer le système d'exploitation sur une machine virtuelle et configurer la machine afin qu'elle soit opérationnelle. Nous avons installé les logiciels nécessaire, modifier les permissions et permettre à la machine d'accéder à l'exterieur du réseau local. </span>
-									</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
+						<div class="project" style="background-image: url(images/instalPostes.jfif);">
+							<div class="desc">
+								<div class="con">
+									<h3>Installations de postes</h3>
+									<span>Cette SAé nous à demandé le déploiement et la configuration de postes de travail prêt à l'emploi pour un développeur. Nous avons donc dû installer le système d'exploitation sur une machine virtuelle et configurer la machine afin qu'elle soit opérationnelle. Nous avons installé les logiciels nécessaire, modifier les permissions et permettre à la machine d'accéder à l'exterieur du réseau local. </span>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/projetParcoursup.png);">
-								<div class="desc">
-									<div class="con">
-										<h3>Exploitation d'une base de données</h3>
-										<span>Le projet consiste à ventiler les informations de la base de donnée de Parcoursup 2020. <br>
-											Nous avons du créer un MCD, un MLD, puis une base de donnée PSQL. Avant cela, une analyse des données était indispansable afin d'éviter les redondances de valeurs. </span>
-									</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+						<div class="project" style="background-image: url(images/projetParcoursup.png);">
+							<div class="desc">
+								<div class="con">
+									<h3>Exploitation d'une base de données</h3>
+									<span>Le projet consiste à ventiler les informations de la base de donnée de Parcoursup 2020. <br>
+										Nous avons du créer un MCD, un MLD, puis une base de donnée PSQL. Avant cela, une analyse des données était indispansable afin d'éviter les redondances de valeurs. </span>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/projetTutorat.png);">
-								<div class="desc">
-									<div class="con">
-										<h3>Création sytème gestion de tutorat</h3>
-										<span>Cette SAé à pour but la mise en relation des Tuteurs/Tutorés via une application qui vise à créer des couples automatiquement selon des critères définis par avance. L'interface est développée avec JavaFX et l'algorithme d'attribution des couples est réalisé en Java</span>
-										<p class="icon">
-											<span><a href="https://github.com/PierreChtimipi/InterfaceGestionTutorat"><i class="icon-github"></i></a></span>
-										</p>
-									</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="project" style="background-image: url(images/projetTutorat.png);">
+							<div class="desc">
+								<div class="con">
+									<h3>Création sytème gestion de tutorat</h3>
+									<span>Cette SAé à pour but la mise en relation des Tuteurs/Tutorés via une application qui vise à créer des couples automatiquement selon des critères définis par avance. L'interface est développée avec JavaFX et l'algorithme d'attribution des couples est réalisé en Java</span>
+									<p class="icon">
+										<span><a href="https://github.com/PierreChtimipi/InterfaceGestionTutorat"><i class="icon-github"></i></a></span>
+									</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/jeuludopedagogique.png);">
-								<div class="desc">
-									<div class="con">
-										<h3>Jeu Ludopédagogique</h3>
-										<span>
-										Pour ce projet, le but était de créer un mini-jeu Ludopédagogique déstiné à un très jeune public. Le jeu que nous avons réalisé est un petit quiz, développé en iJava (langage interne à notre IUT pour nous apprendre l'algorithmie en Java). Les questions étaient portés sur la culture générale, allant du sport, aux domaines scientifiques, etc . . .</span>
-										<p class="icon">
-											<span><a href="https://github.com/bastienwawa/fonction-pour-un-champion" target="_blank"><i class="icon-github"></i></a></span>
-
-										</p>
-									</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="project" style="background-image: url(images/jeuludopedagogique.png);">
+							<div class="desc">
+								<div class="con">
+									<h3>Jeu Ludopédagogique</h3>
+									<span>
+									Pour ce projet, le but était de créer un mini-jeu Ludopédagogique déstiné à un très jeune public. Le jeu que nous avons réalisé est un petit quiz, développé en iJava (langage interne à notre IUT pour nous apprendre l'algorithmie en Java). Les questions étaient portés sur la culture générale, allant du sport, aux domaines scientifiques, etc . . .</span>
+									<p class="icon">
+										<span><a href="https://github.com/bastienwawa/fonction-pour-un-champion" target="_blank"><i class="icon-github"></i></a></span>
+									</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/LOGO_SQUALE-1.png);">
-								<div class="desc">
-									<div class="con">
-										<h3>Bureau Informatique des Étudiants</h3>
-										<span>Avec 4 amis nous avons décidé de prendre la relève du Bureau Des Etudiants de notre formation. Je suis le Pôle évennementiel, c'est donc à moi de gérer les évennements organisés par l'association. Je suis en contact avec nos collaborateurs afin de prévoir au mieux nos activités. <br>
-										Nous avons également participé de notre côté au ZEvent 2022, un évennement carritatif organisé par Zerator en direct sur Twitch. Le but était donc de récolter de l'argent pour l'environnement, ce qui à motivé les spectateurs à donner était les défis que nous devions réaliser à chaque palier de dons. Nous avons alors récolté 1400€. </span>
-										<p class="icon">
-											<span><a href="https://www.instagram.com/squale.bde/" target="_blank"><i class="icon-instagram"></i></a></span>
-										</p>
-									</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+						<div class="project" style="background-image: url(images/LOGO_SQUALE-1.png);">
+							<div class="desc">
+								<div class="con">
+									<h3>Bureau Informatique des Étudiants</h3>
+									<span>Avec 4 amis nous avons décidé de prendre la relève du Bureau Des Etudiants de notre formation. Je suis le Pôle évennementiel, c'est donc à moi de gérer les évennements organisés par l'association. Je suis en contact avec nos collaborateurs afin de prévoir au mieux nos activités. <br>
+									Nous avons également participé de notre côté au ZEvent 2022, un évennement carritatif organisé par Zerator en direct sur Twitch. Le but était donc de récolter de l'argent pour l'environnement, ce qui à motivé les spectateurs à donner était les défis que nous devions réaliser à chaque palier de dons. Nous avons alors récolté 1400€. </span>
+									<p class="icon">
+										<span><a href="https://www.instagram.com/squale.bde/" target="_blank"><i class="icon-instagram"></i></a></span>
+									</p>
 								</div>
 							</div>
 						</div>
+					</div>
 					</div>
 				</div>
 			</section>
