--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 									<div class="con">
 										<h3>Déployer et sécuriser des services dans un réseau</h3>
 										<span>
-											Dans le cadre de cette SAÉ, nous nous sommes mis du coté de l'hébergeur. On a donc mis en place une infrastructure permettant de réaliser l’hébergement de différents serveurs Odoo pour des clients. Nous avons été ammenés à réaliser plusieurs installations d’Odoo en fonction des besoins des clients, il était donc primordial d’automatiser le processus de déploiment. L’élément central de cette SAÉ était donc la production de scripts shell permettant ce déploiment automatique. Nous avons du accompagner ce déploiement avec de la documentation afin d'aider au mieux les potentiels utilisateurs.
+											Dans le cadre de cette SAÉ, nous nous sommes mis du coté de l'hébergeur. On a donc mis en place une infrastructure permettant de réaliser l’hébergement de différents serveurs d'un ERP (Odoo) pour des clients. Nous avons été ammenés à réaliser plusieurs installations d’Odoo en fonction des besoins des clients, il était donc primordial d’automatiser le processus de déploiment. L’élément central de cette SAÉ était donc la production de scripts shell permettant ce déploiment automatique. Nous avons du accompagner ce déploiement avec de la documentation afin d'aider au mieux les potentiels utilisateurs.
 										</span>
 									</div>
 								</div>
