--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/img_bg_1.jpg);">
+				   	<li style="background-image: url(images/background.png);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
-						   					<h1>Bonjour ! <br> Je suis Pierre Foulon, actuellement en 2ème année de BUT Informatique à l'IUT A de Lille</h1>
-												<p><a class="btn btn-primary btn-learn" href="CV - Recherche stage - Flouté.pdf" download="CV Pierre FOULON">Télécharger mon CV <i class="icon-download4"></i></a></p>
+						   					<h1>Pierre Foulon, <br> 3ème année de BUT Informatique à l'IUT A de Lille <br> Alternant chez CarStudio</h1>
+												<p><a class="btn btn-primary btn-learn" href="CV - Recherche stage - Flouté.pdf" download="CV Pierre FOULON">Télécharger mon CV<i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
